NO-1284 Filenames modified and tests have been added

--- a/package.json
+++ b/package.json
@@ -8,15 +8,18 @@
   "license": "Unlicensed",
   "private": true,
   "dependencies": {
+    "ajv": "^8.17.1",
     "ts-json-schema-generator": "^2.4.0",
     "typescript": "^5.8.3"
   },
   "devDependencies": {
     "@types/node": "^24.0.12",
+    "jest": "^29.7.0",
     "ts-node": "^10.9.2"
   },
   "scripts": {
     "generateSchemas": "ts-node generateSchema.ts",
+    "test": "jest",
     "build": "tsc"
   }
 }
