NO-1284 Folder structure has been modified

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "scripts": {
     "generateSchemas": "ts-node generateSchema.ts",
     "test": "jest",
-    "build": "tsc"
+    "build": "tsc",
+    "test:file": "jest"
   }
 }
