NO-1284 Command to run single test File has been added

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "generateSchemas": "ts-node generateSchema.ts",
     "test": "jest",
     "build": "tsc",
-    "test:file": "jest"
+    "testFile": "jest"
   }
+  
 }
