NO-1284 Github action updated

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -28,7 +28,7 @@ jobs:
       run: yarn install --frozen-lockfile
 
     - name: Generate schemas (if needed)
-      run: yarn generateSchemas
+      run: yarn generateSchema
       
     - name: Run tests
       run: yarn test
