--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,33 +9,31 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
-    
+
     strategy:
       matrix:
         node-version: [18.x]
-    
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
-      
-    - name: Setup Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v4
-      with:
-        node-version: ${{ matrix.node-version }}
-        cache: 'yarn'
-        
-    - name: Install dependencies
-      run: yarn install --frozen-lockfile
 
-    - name: Generate schemas (if needed)
-      run: yarn generateSchema
-      
-    - name: Run tests
-      run: yarn test
-      env:
-        NODE_ENV: test
-      
-    - name: Build project
-      run: yarn build 
-      
-    
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Setup Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v4
+        with:
+          node-version: ${{ matrix.node-version }}
+          cache: 'npm'  # Cache npm dependencies using package-lock.json
+
+      - name: Install dependencies
+        run: npm ci  # Clean and fast install using package-lock.json
+
+      - name: Generate schemas
+        run: npm run generateSchema
+
+      - name: Run tests
+        run: npm run test
+        env:
+          NODE_ENV: test
+
+      - name: Build project
+        run: npm run build
